fix: list view more wrap

--- a/src/sass/components/molecules/list-view-more/_styles.scss
+++ b/src/sass/components/molecules/list-view-more/_styles.scss
@@ -12,6 +12,9 @@
       margin-bottom: calculateRem(16px);
       transition: max-height 0.5s;
     }
+    &__Btn {
+      white-space: nowrap;
+    }
     &--ViewMoreClicked {
       #{$this}__List {
         max-height: 70vh;
